WTF::StringView::split should have an allowEmptyEntries flag https://bugs.webkit.org/show_bug.cgi?id=187864

Reviewed by Konstantin Tokarev.

Source/WTF:

* wtf/text/StringView.cpp:
(WTF::StringView::SplitResult::Iterator::findNextSubstring):
(WTF::StringView::SplitResult::Iterator::operator++):
* wtf/text/StringView.h:
(WTF::StringView::split const):
(WTF::StringView::SplitResult::SplitResult):
(WTF::StringView::SplitResult::Iterator::operator== const):
We can't mimic String::split completely, because this one's iterator-based --
achieve desired behavior by adding m_allowEmptyEntries to SplitResult and m_isDone to its Iterator.
(The latter keeps us from hitting begin() == end() prematurely on a final empty entry.)

Tools:

* TestWebKitAPI/Tests/WTF/StringView.cpp: Add test.


Canonical link: https://commits.webkit.org/203101@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234122 268f45cc-cd09-0410-ab3c-d52691b4dbfc